<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background_grey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_blue"
        app:title="Third"
        app:titleTextColor="@color/white"
        android:elevation="4dp"
        android:theme="@style/MyActionBarTheme"/>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/MyCustomTabText"
            app:tabIndicatorColor="@color/dark_blue"
            app:tabTextColor="@color/text_black"
            app:tabIconTint="@color/orange">

            <com.google.android.material.tabs.TabItem
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:icon="@drawable/info_icon"
                android:text="@string/details">

            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:icon="@drawable/artwork_icon"
                android:text="@string/artwork"/>


        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/detail_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone">
    </ProgressBar>
    <TextView
        android:id="@+id/detail_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_gravity="center"
        android:textColor="@color/artsy_link"
        android:visibility="gone"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    </androidx.viewpager.widget.ViewPager>


</LinearLayout>