<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentDetail"
    android:background="@color/app_background_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="40dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/name"
            android:textColor="@color/date_color"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/detail_name_content"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_name"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="Claude"
            android:textSize="18sp"
            android:textColor="@color/artsy_link" />
        <TextView
            android:id="@+id/detail_nationality"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_name_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="40dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/nationality"
            android:textColor="@color/date_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/detail_nationality_content"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_name_content"
            app:layout_constraintStart_toEndOf="@+id/detail_nationality"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="French"
            android:textSize="18sp"
            android:textColor="@color/artsy_link"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/detail_birthday"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_nationality_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="40dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/birthday"
            android:textColor="@color/date_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/detail_birthday_content"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_nationality_content"
            app:layout_constraintStart_toEndOf="@+id/detail_birthday"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="1842"
            android:textSize="18sp"
            android:textColor="@color/artsy_link"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/detail_deathday"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_birthday_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="40dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/deathday"
            android:textColor="@color/date_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/detail_deathday_content"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_birthday_content"
            app:layout_constraintStart_toEndOf="@+id/detail_deathday"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="1930"
            android:textSize="18sp"
            android:textColor="@color/artsy_link"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/detail_biography"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_deathday_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="40dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/biography"
            android:textColor="@color/date_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/detail_biography_content"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_deathday_content"
            app:layout_constraintStart_toEndOf="@+id/detail_biography"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="adsdfsdaf"
            android:textSize="18sp"
            android:textColor="@color/artsy_link"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>