<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_no_category"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_marginStart="10dp"
        android:text="@string/no_category"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/no_result_grey"
        android:background="@color/search_hint"
        android:visibility="gone"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dialog_view"
        android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dialog_category"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="15dp"
                    android:paddingStart="25dp"
                    android:text="@string/category"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_black" />
                <TextView
                    android:id="@+id/dialog_name"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/dialog_category"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="5dp"
                    android:paddingStart="25dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_black" />

                <ImageView
                    android:id="@+id/dialog_img"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/dialog_name"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/artsy_image" />
                <TextView
                    android:id="@+id/dialog_description"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/dialog_img"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:paddingStart="35dp"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_black" />
                <TextView
                    android:id="@+id/dialog_description_content"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/dialog_img"
                    app:layout_constraintStart_toEndOf="@id/dialog_description"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/artsy_link" />
            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>
